iRedMail-1.0:
    * Supports new distribution release:
        + OpenBSD 6.6

    * Fixed issues:
        - Rejects the new Facebook servers which contain IP address in their
          HELO identities.

    * Updated packages:
        + Roundcube webmail -> 1.4.0
        + netdata -> 1.18.1

iRedMail-1.0-beta2:
    * Removed OpenDMARC integration due to internal bug which caused incorrect
      email rejection. Bug reported to upstream:
      https://github.com/trusteddomainproject/OpenDMARC/issues/50

    * Improvements:
        + tools/backup_*.sh: Remove old empty backup directory.

    * Fixed issues:
        - Incorect SSL CA file path on FreeBSD.
        - Improper postrotate command for log files on Linux.

    * Updated packages:
        + iRedAPD -> 3.2
        + netdata -> 1.18.0

iRedMail-1.0-beta1:
    * Supports new distribution release:
        + OpenBSD 6.5
        + Debian 10

    * Drop support for old distribution releases:
        - OpenBSD 6.4
        - Ubuntu 16.04, 18.10.

            NOTE: We have no plan to support non-LTS edition anymore, only the
            latest LTS edition will be supported.

    * Drop support for OpenBSD ldapd backend.
    * Improvements:
        + Dovecot:
            - Enable quota-status service. Postfix can query this service and
              reject email immediately if user's mailbox is over quota.
            - Enable tracking user loast login time by default for
              MySQL/MariaDB and OpenLDAP backends.
              Note: Dovecot doesn't support this with PostgreSQL yet.

        + netdata: Disable sending anonymous statistics to netdata cloud.

    * Fixed issues:
        - Improper order of restriction rules in Postfix
          `smtpd_sender_restrictions` setting.
        - Fail2ban jail config file doesn't correctly set sshd port number(s).
        - Loose Fail2ban filter rules (postfix/dovecot) to reduce negative bans.