@@ -1,0 +1,2 @@
+[Service]
+TimeoutSec = 600
